# NPC-ia

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/routers/: gptj_router.py
app/services/: gptj_service.py
