[tool.poetry]
name = "mi-proyecto"
version = "0.1.0"
description = "Servicio GPT-J con FastAPI"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
transformers = "^4.30.0"
torch = "^2.0.0"
pydantic = "^2.0.0"
accelerate = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"